--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "5.3.0",
     "@openzeppelin/contracts-upgradeable": "5.3.0",
+    "@openzeppelin/hardhat-upgrades": "3.9.0",
     "ds-test": "dapphub/ds-test",
     "forge-std": "foundry-rs/forge-std",
     "solidity-stringutils": "Arachnid/solidity-stringutils"
