--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -33,6 +33,7 @@
     "@openzeppelin/contracts-upgradeable": "5.3.0",
     "@openzeppelin/foundry-upgrades": "0.4.0",
     "@openzeppelin/hardhat-upgrades": "3.9.0",
+    "@openzeppelin/upgrades-core": "1.44.0",
     "ds-test": "dapphub/ds-test",
     "forge-std": "foundry-rs/forge-std",
     "solidity-stringutils": "Arachnid/solidity-stringutils"
