chore(deps): add `@ensdomains/ens-contracts` dependency
Added `@ensdomains/ens-contracts` to support ENS-related features.
This enables integration with ENS contracts for future development.

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -34,6 +34,7 @@
     "@openzeppelin/foundry-upgrades": "0.4.0",
     "@openzeppelin/hardhat-upgrades": "3.9.0",
     "@openzeppelin/upgrades-core": "1.44.0",
+    "@ensdomains/ens-contracts": "1.4.0",
     "ds-test": "dapphub/ds-test",
     "forge-std": "foundry-rs/forge-std",
     "solidity-stringutils": "Arachnid/solidity-stringutils"
