chore(deps): migrate `.npmrc` to `pnpm-workspace.yaml`
This change consolidates configuration in `pnpm-workspace.yaml` for a cleaner setup and better compatibility with pnpm. Removed `.npmrc` to avoid redundancy.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,12 @@
+saveExact: true
+engineStrict: true
+enablePrePostScripts: true
+
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+
+onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
+  - core-js-pure
+  - unrs-resolver
