--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,14 +1,16 @@
-saveExact: true
-engineStrict: true
-enablePrePostScripts: true
-
 packages:
   - apps/*
   - packages/*
-
+enablePrePostScripts: true
+engineStrict: true
+nodeLinker: hoisted
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
+  - bufferutil
   - core-js-pure
+  - esbuild
+  - keccak
+  - secp256k1
   - unrs-resolver
-
-nodeLinker: hoisted
+  - utf-8-validate
+saveExact: true
