chore(contracts): add `name` field to `package.json`
Included the `name` field for better identification and alignment with package metadata standards.

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@repo/contracts",
   "private": true,
   "description": "A template for create smart contracts using Foundry and Hardhat.",
   "keywords": [],
