--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -79,3 +79,7 @@ updates:
       - dependency-name: "@type/chai"
         update-types:
           - "version-update:semver-major"
+      - dependency-name: "typescript"
+        update-types:
+          - "version-update:semver-major"
+          - "version-update:semver-minor"
