--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -17,6 +17,14 @@
     "clean": "pnpm run --sequential '/^clean:.*/'",
     "clean:forge": "forge clean",
     "clean:hardhat": "hardhat clean",
+    "deploy": "hardhat run scripts/deploy.ts",
+    "deploy:mainnet": "hardhat run scripts/deploy.ts --network mainnet",
+    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
+    "deploy:goerli": "hardhat run scripts/deploy.ts --network goerli",
+    "deploy:localhost": "hardhat run scripts/deploy.ts --network localhost",
+    "deploy:forge": "forge script script/DeployLilNounsEnsMapperV2.s.sol:DeployLilNounsEnsMapperV2 --rpc-url $RPC_URL --private-key $PRIVATE_KEY --broadcast --verify --etherscan-api-key $ETHERSCAN_API_KEY",
+    "deploy:forge:mainnet": "forge script script/DeployLilNounsEnsMapperV2.s.sol:DeployLilNounsEnsMapperV2 --rpc-url $MAINNET_RPC_URL --private-key $PRIVATE_KEY --broadcast --verify --etherscan-api-key $ETHERSCAN_API_KEY",
+    "deploy:forge:sepolia": "forge script script/DeployLilNounsEnsMapperV2.s.sol:DeployLilNounsEnsMapperV2 --rpc-url $SEPOLIA_RPC_URL --private-key $PRIVATE_KEY --broadcast --verify --etherscan-api-key $ETHERSCAN_API_KEY",
     "preinstall": "npx -y only-allow pnpm",
     "postinstall": "forge install && pnpm remappings",
     "lint": "pnpm run --sequential '/^lint:.*/'",
@@ -25,8 +33,38 @@
     "remappings": "forge remappings > remappings.txt",
     "pretest": "pnpm run build",
     "test": "pnpm run --sequential '/^test:.*/'",
+    "test:parallel": "pnpm test:forge & pnpm test:hardhat & wait",
     "test:forge": "forge test -vvvv",
-    "test:hardhat": "hardhat test --typecheck"
+    "test:hardhat": "hardhat test --typecheck",
+    "coverage": "pnpm run --sequential '/^coverage:.*/'",
+    "coverage:forge": "forge coverage --report lcov --report summary",
+    "coverage:hardhat": "hardhat coverage",
+    "coverage:report": "pnpm coverage:forge && pnpm coverage:hardhat",
+    "upgrade": "hardhat run scripts/upgrade.ts --",
+    "upgrade:mainnet": "hardhat run scripts/upgrade.ts --network mainnet --",
+    "upgrade:sepolia": "hardhat run scripts/upgrade.ts --network sepolia --",
+    "upgrade:goerli": "hardhat run scripts/upgrade.ts --network goerli --",
+    "upgrade:localhost": "hardhat run scripts/upgrade.ts --network localhost --",
+    "upgrade:forge": "forge script script/UpgradeLilNounsEnsMapperV2.s.sol:UpgradeLilNounsEnsMapperV2 --rpc-url $RPC_URL --private-key $PRIVATE_KEY --broadcast",
+    "upgrade:forge:mainnet": "forge script script/UpgradeLilNounsEnsMapperV2.s.sol:UpgradeLilNounsEnsMapperV2 --rpc-url $MAINNET_RPC_URL --private-key $PRIVATE_KEY --broadcast",
+    "upgrade:forge:sepolia": "forge script script/UpgradeLilNounsEnsMapperV2.s.sol:UpgradeLilNounsEnsMapperV2 --rpc-url $SEPOLIA_RPC_URL --private-key $PRIVATE_KEY --broadcast",
+    "verify": "hardhat run scripts/verify.ts --",
+    "verify:mainnet": "hardhat run scripts/verify.ts --network mainnet --",
+    "verify:sepolia": "hardhat run scripts/verify.ts --network sepolia --",
+    "verify:goerli": "hardhat run scripts/verify.ts --network goerli --",
+    "verify:deployment": "hardhat run scripts/verify.ts -- deployment",
+    "verify:deployment:mainnet": "hardhat run scripts/verify.ts --network mainnet -- deployment",
+    "verify:deployment:sepolia": "hardhat run scripts/verify.ts --network sepolia -- deployment",
+    "verify:checks": "hardhat run scripts/verify.ts -- checks",
+    "interact": "hardhat run scripts/interact.ts --",
+    "interact:mainnet": "hardhat run scripts/interact.ts --network mainnet --",
+    "interact:sepolia": "hardhat run scripts/interact.ts --network sepolia --",
+    "interact:goerli": "hardhat run scripts/interact.ts --network goerli --",
+    "interact:localhost": "hardhat run scripts/interact.ts --network localhost --",
+    "contract:info": "hardhat run scripts/interact.ts -- info",
+    "contract:pause": "hardhat run scripts/interact.ts -- pause",
+    "contract:unpause": "hardhat run scripts/interact.ts -- unpause",
+    "contract:health": "hardhat run scripts/interact.ts -- health"
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.4.0",
@@ -52,9 +90,11 @@
     "@types/mocha": "10.0.10",
     "@types/node": "24.3.0",
     "chai": "4.5.0",
+    "dotenv": "16.4.5",
     "ethers": "6.15.0",
     "hardhat": "2.26.1",
     "solhint": "6.0.0",
+    "solidity-coverage": "0.8.15",
     "ts-node": "10.9.2",
     "typechain": "8.3.2",
     "typescript": "5.9.2"
