--- a/packages/contracts/slither.config.json
+++ b/packages/contracts/slither.config.json
@@ -1,4 +1,5 @@
 {
   "compile_force_framework": "foundry",
-  "filter_paths": "lib,node_modules"
+  "filter_paths": "lib,node_modules",
+  "detectors_to_exclude": "calls-loop,naming-convention,unused-state"
 }
