chore(deps): update dependabot config to ignore all major updates
Revised to prevent major and minor version updates for all dependencies, improving stability and reducing the frequency of dependency updates.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -73,13 +73,6 @@ updates:
           - '@wagmi/*'
     # List of packages to ignore for specific update types
     ignore:
-      - dependency-name: "chai"
+      - dependency-name: "*"
         update-types:
           - "version-update:semver-major"
-      - dependency-name: "@type/chai"
-        update-types:
-          - "version-update:semver-major"
-      - dependency-name: "typescript"
-        update-types:
-          - "version-update:semver-major"
-          - "version-update:semver-minor"
