chore(build): add `clean` pipeline task configuration
Introduce a `clean` task with dependencies and disabled cache to support consistent builds. This ensures proper cleanup for improved build reliability.

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,10 @@
     "test": {
       "dependsOn": ["^test"]
     },
+    "clean": {
+      "dependsOn": ["^clean"],
+      "cache": false
+    },
     "dev": {
       "cache": false,
       "persistent": true
