chore(scripts): add `clean` script to package.json
Introduce a `clean` script to facilitate automated cleanup tasks, ensuring consistent and reliable build processes.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "clean": "turbo run clean",
     "format": "prettier --write \"**/*.{ts,tsx,md,sol}\"",
     "lint": "turbo run lint",
     "prepare": "husky",
