--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -5,6 +5,7 @@ libs = ["lib"]
 gas_reports = ["*"]
 solc_version = "0.8.29"
 via_ir = true
+runs = 200
 
 remappings = [
   "@ensdomains/ens-contracts/=node_modules/@ensdomains/ens-contracts/contracts/",
