test(contracts): reduce verbosity level in `test:forge`
Update verbosity level from `-vvvv` to `-vvv` for forge tests.

This change ensures less verbose output, improving readability of test results while retaining sufficient detail for debugging.

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -25,7 +25,7 @@
     "remappings": "forge remappings > remappings.txt",
     "pretest": "pnpm run build",
     "test": "pnpm run --sequential '/^test:.*/'",
-    "test:forge": "forge test -vvvv",
+    "test:forge": "forge test -vvv",
     "test:hardhat": "hardhat test --typecheck"
   },
   "dependencies": {
