build(contracts): enable additional foundry build options
Add support for `ffi`, `ast`, `build_info`, and `storageLayout`.

These additions enhance contract analysis and debugging capabilities, ensuring more informative outputs and better development workflows.

--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -16,6 +16,10 @@ remappings = [
   "ds-test/=node_modules/ds-test/src/",
   "solidity-stringutils/=node_modules/solidity-stringutils/",
 ]
+ffi = true
+ast = true
+build_info = true
+extra_output = ["storageLayout"]
 
 [fmt]
 line_length = 80
