--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -26,6 +26,9 @@ line_length = 80
 tab_width = 2
 bracket_spacing = true
 
+[lint]
+exclude_lints = ["asm-keccak256"]
+
 [rpc_endpoints]
 mainnet = "${MAINNET_RPC_URL}"
 sepolia = "${SEPOLIA_RPC_URL}"
