chore(deps): update workspace config and enforce overrides
Ensure stricter dependency control with `engineStrict` and overrides. Added `saveExact` to lock dependency versions and centralized resolution.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,11 @@
 packages:
   - apps/*
   - packages/*
+
 enablePrePostScripts: true
+
 engineStrict: true
+
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - bufferutil
@@ -12,4 +15,20 @@ onlyBuiltDependencies:
   - secp256k1
   - unrs-resolver
   - utf-8-validate
+
 saveExact: true
+
+overrides:
+  base-x: ">=3.0.11"
+  brace-expansion: ">=2.0.2"
+  cookie: ">=0.7.0"
+  debug: ">=3.2.7"
+  elliptic: ">=6.6.1"
+  eth-gas-reporter: ">=0.2.26"
+  flat: ">=5.0.1"
+  minimatch: ">=3.0.5"
+  pbkdf2: ">=3.1.3"
+  request: ">=2.88.2"
+  tough-cookie: ">=4.1.3"
+  word-wrap: ">=1.2.4"
+  ws: ">=7.5.10"
