--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "tw-animate-css": "1.3.7",
     "typescript": "5.9.2",
     "typescript-eslint": "8.41.0",
+    "vitest": "2.1.5",
     "vite": "7.1.3"
   }
 }
