--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "0.542.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "zod": "3.23.8",
     "tailwind-merge": "3.3.1",
     "viem": "2.36.0",
     "wagmi": "2.16.9"
