feat(web): add chain-specific RPC and subgraph URL support
This ensures accurate network data by using chain-specific URLs. Prevents cross-network data mismatches and improves configuration clarity.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,6 +1,8 @@
 # Subgraph endpoint URL (used by apps/web)
 # Example: https://api.studio.thegraph.com/query/12345/lilnouns/version/latest
 VITE_SUBGRAPH_URL="https://example.com/subgraph"
+VITE_SUBGRAPH_URL_MAINNET=""
+VITE_SUBGRAPH_URL_SEPOLIA=""
 
 # Chain selection (choose one)
 # Either set name:
