--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prettier-plugin-toml": "2.0.6",
     "turbo": "2.5.6"
   },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
+  "packageManager": "pnpm@10.15.1",
   "engines": {
     "node": ">=22.0.0 <23.0.0",
     "pnpm": ">=10.0.0"
