feat(web): add distinct RPC URL environment variables
Support mainnet and Sepolia-specific RPC URLs for flexibility.

Improves configurability by allowing environment-specific RPC endpoints, ensuring better alignment with deployment needs.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -11,6 +11,9 @@ VITE_SUBGRAPH_URL_SEPOLIA=""
 # VITE_CHAIN_ID=11155111
 
 # Optional: explicit RPC endpoint for the selected chain
-# If not set, defaults to the chain's public RPC from viem.
-# Example (Sepolia): https://ethereum-sepolia-rpc.publicnode.com
-VITE_RPC_HTTP_URL=""
+# If not set, viem falls back to the chain's default/public RPC.
+# Examples:
+# VITE_RPC_HTTP_URL_MAINNET="https://ethereum-rpc.publicnode.com"
+# VITE_RPC_HTTP_URL_SEPOLIA="https://ethereum-sepolia-rpc.publicnode.com"
+VITE_RPC_HTTP_URL_MAINNET=""
+VITE_RPC_HTTP_URL_SEPOLIA=""
