--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "eslint": "9.34.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.5",
     "prettier": "3.6.2",
