--- a/package.json
+++ b/package.json
@@ -16,7 +16,20 @@
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "1.52.9",
+    "@eslint/js": "9.34.0",
     "eslint": "9.34.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import-x": "4.16.1",
+    "eslint-plugin-perfectionist": "4.15.0",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.20",
+    "eslint-plugin-sonarjs": "3.0.5",
+    "eslint-plugin-turbo": "2.5.6",
+    "eslint-plugin-unicorn": "60.0.0",
+    "globals": "16.3.0",
     "husky": "9.1.7",
     "lint-staged": "16.1.5",
     "prettier": "3.6.2",
@@ -24,6 +37,8 @@
     "prettier-plugin-solidity": "2.1.0",
     "prettier-plugin-tailwindcss": "0.6.14",
     "prettier-plugin-toml": "2.0.6",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.41.0",
     "turbo": "2.5.6"
   },
   "packageManager": "pnpm@10.15.1",
