--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,23 +27,13 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "9.34.0",
     "@tailwindcss/postcss": "4.1.12",
     "@turbo/gen": "2.5.6",
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
-    "@typescript-eslint/eslint-plugin": "8.41.0",
-    "@typescript-eslint/parser": "8.41.0",
-    "eslint": "9.34.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-only-warn": "1.1.0",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-turbo": "2.5.6",
-    "globals": "16.3.0",
     "tailwindcss": "4.1.12",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.41.0"
+    "typescript": "5.9.2"
+
   }
 }
