--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.542.0",
+    "sonner": "1.5.0",
     "graphql-request": "7.2.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
