--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "graphql-request": "7.2.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "remeda": "2.30.0",
     "zod": "3.25.76",
     "tailwind-merge": "3.3.1",
     "viem": "2.36.0",
