--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,7 @@
     "wagmi": "2.16.9"
   },
   "devDependencies": {
-    
+
     "@tailwindcss/vite": "4.1.12",
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
@@ -42,6 +42,7 @@
     "rimraf": "6.0.1",
     "tailwindcss": "4.1.12",
     "tw-animate-css": "1.3.7",
+    "type-fest": "4.41.0",
     "typescript": "5.9.2",
     "vitest": "2.1.9",
     "vite": "7.1.3"
