--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "prettier-plugin-solidity": "2.1.0",
     "prettier-plugin-tailwindcss": "0.6.14",
     "prettier-plugin-toml": "2.0.6",
+    "turbo": "2.5.6",
     "typescript": "5.9.2",
     "typescript-eslint": "8.41.0",
-    "turbo": "2.5.6"
   },
   "packageManager": "pnpm@10.15.1",
   "engines": {
