--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,14 +19,14 @@
     "clsx": "2.1.1",
     "graphql-request": "7.2.0",
     "lucide-react": "0.542.0",
-    "sonner": "1.5.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "remeda": "2.30.0",
-    "zod": "3.25.76",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "viem": "2.36.0",
     "wagmi": "2.16.9"
+    "zod": "4.1.5"
   },
   "devDependencies": {
 
