--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,8 +24,8 @@
     "remeda": "2.30.0",
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
-    "wagmi": "2.16.9"
     "viem": "2.37.2",
+    "wagmi": "2.16.9",
     "zod": "4.1.5"
   },
   "devDependencies": {
