--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,7 +45,7 @@
     "type-fest": "4.41.0",
     "typescript": "5.9.2",
     "typescript-eslint": "8.42.0",
-    "vite": "7.1.3"
+    "vite": "7.1.4",
     "vitest": "3.2.4"
   }
 }
