--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-turbo": "2.5.6",
     "globals": "16.3.0",
+    "shadcn": "3.2.1",
     "tailwindcss": "4.1.12",
     "typescript": "5.9.2",
     "typescript-eslint": "8.42.0"
