--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "0.542.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "tw-animate-css": "1.3.8",
     "zod": "4.1.5"
