chore(web): add app description to package metadata
Include a brief app description to improve package clarity and provide context about its purpose when viewed in package registries or tools.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/web",
   "version": "0.0.0",
   "private": true,
+  "description": "Vite + React dApp for interacting with Lil Nouns ENS contracts.",
   "type": "module",
   "scripts": {
     "prebuild": "is-ci && exit 0 || (pnpm clean && pnpm wagmi generate)",
