--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "description": "Shared React UI components and hooks for the Lil Nouns ENS dApp.",
   "type": "module",
   "exports": {
     "./index.css": "./src/index.css",
