chore(root): update package description
Enhance package metadata to clarify its purpose as a monorepo for Lil Nouns ENS, including the web dApp, contracts, and shared UI.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lilnouns-ens",
   "version": "1.0.0-alpha.16",
   "private": true,
-  "description": "A template for create dApps using Vite",
+  "description": "Monorepo for Lil Nouns ENS: web dApp, contracts, and shared UI.",
   "keywords": [],
   "license": "Apache-2.0",
   "author": "Milad Nekofar <milad@nekofar.com>",
