ci(workflows): add environment variables for build
Include environment variables in the deploy workflow to support chain selection, WalletConnect, and RPC configurations. This ensures proper build-time configuration and enhanced flexibility for deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,23 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.pages_deploy.outputs.page_url }}
+    
+    # -------------------------------------------------------------
+    # 🌍 ENVIRONMENT VARIABLES (Frontend build-time)
+    # -------------------------------------------------------------
+    env:
+      NODE_ENV: production
+      # Chain selection (optional): set one of these
+      VITE_CHAIN_ID: ${{ vars.VITE_CHAIN_ID }}
+      VITE_CHAIN_NAME: ${{ vars.VITE_CHAIN_NAME }}
+      # WalletConnect (usually secret)
+      VITE_WC_PROJECT_ID: ${{ secrets.VITE_WC_PROJECT_ID }}
+      # RPC URLs (keep secret if they embed keys)
+      VITE_RPC_HTTP_URL_MAINNET: ${{ secrets.VITE_RPC_HTTP_URL_MAINNET }}
+      VITE_RPC_HTTP_URL_SEPOLIA: ${{ secrets.VITE_RPC_HTTP_URL_SEPOLIA }}
+      # Subgraph URLs (typically non-secret)
+      VITE_SUBGRAPH_URL_MAINNET: ${{ vars.VITE_SUBGRAPH_URL_MAINNET }}
+      VITE_SUBGRAPH_URL_SEPOLIA: ${{ vars.VITE_SUBGRAPH_URL_SEPOLIA }}
 
     steps:
       # 📥 CHECKOUT
