refactor(web): unify environment variables
Simplify configuration by standardizing environment variables for RPC, subgraph, and wallet connections. This reduces complexity and ensures consistency across chain setups.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,9 @@ jobs:
       VITE_CHAIN_NAME: ${{ vars.VITE_CHAIN_NAME }}
       # WalletConnect (usually secret)
       VITE_WC_PROJECT_ID: ${{ secrets.VITE_WC_PROJECT_ID }}
-      # RPC URLs (keep secret if they embed keys)
-      VITE_RPC_HTTP_URL_MAINNET: ${{ secrets.VITE_RPC_HTTP_URL_MAINNET }}
-      VITE_RPC_HTTP_URL_SEPOLIA: ${{ secrets.VITE_RPC_HTTP_URL_SEPOLIA }}
-      # Subgraph URLs (typically non-secret)
-      VITE_SUBGRAPH_URL_MAINNET: ${{ vars.VITE_SUBGRAPH_URL_MAINNET }}
-      VITE_SUBGRAPH_URL_SEPOLIA: ${{ vars.VITE_SUBGRAPH_URL_SEPOLIA }}
+      # Unified endpoints
+      VITE_RPC_HTTP_URL: ${{ secrets.VITE_RPC_HTTP_URL }}
+      VITE_SUBGRAPH_URL: ${{ vars.VITE_SUBGRAPH_URL }}
 
     steps:
       # 📥 CHECKOUT
