refactor(web): simplify environment variable examples
Remove unused examples to streamline configuration and focus on essential variables. This reduces clutter and improves clarity for developers.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,8 +1,6 @@
 # Subgraph endpoint URL (used by apps/web)
 # Example: https://api.studio.thegraph.com/query/12345/lilnouns/version/latest
 VITE_SUBGRAPH_URL="https://example.com/subgraph"
-VITE_SUBGRAPH_URL_MAINNET=""
-VITE_SUBGRAPH_URL_SEPOLIA=""
 
 # Chain selection (choose one)
 # Either set name:
@@ -12,8 +10,5 @@ VITE_SUBGRAPH_URL_SEPOLIA=""
 
 # Optional: explicit RPC endpoint for the selected chain
 # If not set, viem falls back to the chain's default/public RPC.
-# Examples:
-# VITE_RPC_HTTP_URL_MAINNET="https://ethereum-rpc.publicnode.com"
-# VITE_RPC_HTTP_URL_SEPOLIA="https://ethereum-sepolia-rpc.publicnode.com"
-VITE_RPC_HTTP_URL_MAINNET=""
-VITE_RPC_HTTP_URL_SEPOLIA=""
+// Example:
+# VITE_RPC_HTTP_URL="https://ethereum-sepolia-rpc.publicnode.com"
