--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,13 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**"]
+      "outputs": [
+        "dist/**",
+        "apps/*/dist/**",
+        "packages/*/dist/**",
+        "packages/contracts/out/**",
+        "packages/contracts/artifacts/**"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
