--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@farcaster/miniapp-sdk": "0.1.10",
     "@nekofar/lilnouns": "1.0.0-alpha.15",
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "5.87.1",
@@ -30,7 +31,6 @@
     "zod": "4.1.5"
   },
   "devDependencies": {
-
     "@tailwindcss/vite": "4.1.13",
     "@types/node": "24.3.1",
     "@types/react": "19.1.12",
