chore(deps): update `base-x` to v4.0.1
Upgrade `base-x` for better compatibility and to incorporate the latest improvements. This ensures the dependency remains up to date and avoids potential issues with older versions.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,7 +18,7 @@ onlyBuiltDependencies:
   - utf-8-validate
 
 overrides:
-  base-x: '>=3.0.11'
+  base-x: '4.0.1'
   brace-expansion: '>=2.0.2'
   cookie: '>=0.7.0'
   debug: '>=3.2.7'
