--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,6 +28,7 @@ overrides:
   minimatch: '>=3.0.5'
   pbkdf2: '>=3.1.3'
   request: '>=2.88.2'
+  tmp: '>=0.2.4'
   tough-cookie: '>=4.1.3'
   word-wrap: '>=1.2.4'
   ws: '>=7.5.10'
