chore(web): add config for WalletConnect and site metadata
Enable optional WalletConnect support and site metadata customization for improved deployment flexibility and previews.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -10,5 +10,24 @@ VITE_SUBGRAPH_URL="https://example.com/subgraph"
 
 # Optional: explicit RPC endpoint for the selected chain
 # If not set, viem falls back to the chain's default/public RPC.
-// Example:
+# Example:
 # VITE_RPC_HTTP_URL="https://ethereum-sepolia-rpc.publicnode.com"
+
+# WalletConnect (optional)
+# Create a project at walletconnect.com and set the ID to enable WalletConnect
+# If unset, the app runs without WalletConnect.
+VITE_WC_PROJECT_ID=""
+
+# Site metadata (used in index.html only; optional)
+# Update for production deployments to improve previews and rich cards.
+VITE_SITE_TITLE="Lil Nouns ENS"
+VITE_SITE_DESCRIPTION="Claim subnames under lilnouns.eth"
+VITE_SITE_URL="http://localhost:5173"
+VITE_OG_IMAGE="/og.png"
+
+# Farcaster Frame metadata (optional)
+VITE_FC_IMAGE="/og.png"
+VITE_FC_BUTTON="Open App"
+VITE_FC_LAUNCH_URL="http://localhost:5173"
+VITE_FC_SPLASH_ICON="/favicon.ico"
+VITE_FC_SPLASH_BG="#000000"
